# COMP0250_Coursework2

./: README.md
scripts/: install_ros2_deps.sh
src/courseworks/cw1_team_x/: CMakeLists.txt  package.xml
src/courseworks/cw1_team_x/include/: cw1_class.h
src/courseworks/cw1_team_x/launch/: run_solution.launch.py
src/courseworks/cw1_team_x/src/: cw1_class.cpp
src/courseworks/cw1_world_spawner/: CMakeLists.txt  package.xml
src/courseworks/cw1_world_spawner/launch/: test_coursework.launch.py  world_spawner.launch.py
src/courseworks/cw1_world_spawner/models/all_tiles/: model.sdf
src/courseworks/cw1_world_spawner/models/object-golf-tile/: model.config  model.sdf
src/courseworks/cw1_world_spawner/scripts/: test_coursework.py  world_spawner.py
src/courseworks/cw1_world_spawner/src/coursework_world_spawner_lib/: coursework_world_spawner.py
src/courseworks/cw2_team_20/: CMakeLists.txt  README.md  package.xml
src/courseworks/cw2_team_20/config/: ros2_controllers_effort.yaml
src/courseworks/cw2_team_20/include/: cw2_class.h
src/courseworks/cw2_team_20/launch/: run_solution.launch.py
src/courseworks/cw2_team_20/scripts/: fix_gazebo_state_retry.sh
src/courseworks/cw2_team_20/src/: cw2_class.cpp  cw2_motion.cpp  cw2_node.cpp  cw2_perception.cpp  cw2_task1.cpp  cw2_task2.cpp  cw2_task3.cpp
src/courseworks/cw2_team_x/: CMakeLists.txt  package.xml
src/courseworks/cw2_team_x/include/: cw2_class.h
src/courseworks/cw2_team_x/launch/: run_solution.launch.py
src/courseworks/cw2_team_x/src/: cw2_class.cpp
src/courseworks/cw2_world_spawner/: CMakeLists.txt  package.xml
src/courseworks/cw2_world_spawner/launch/: world_spawner.launch  world_spawner.launch.py
src/courseworks/cw2_world_spawner/models/all_tiles/: model.sdf  model.sdf.xmacro
src/courseworks/cw2_world_spawner/scripts/: world_spawner.py
src/courseworks/cw2_world_spawner/src/cw2_world_spawner_lib/: coursework_world_spawner.py
src/courseworks/panda_description/: CMakeLists.txt  package.xml
src/courseworks/panda_description/launch/: description.launch.py
src/courseworks/panda_description/urdf/: panda_arm_hand.urdf.xacro  panda_with_rs.urdf.xacro
src/courseworks/panda_description/xacro/: hand.xacro  panda.control.xacro
src/courseworks/panda_moveit_config/: CMakeLists.txt  package.xml
src/courseworks/panda_moveit_config/config/: pilz_cartesian_limits.yaml
src/courseworks/panda_moveit_config/launch/: move_group.launch  planning_context.launch
src/courseworks/realsense_gazebo_plugin/: CMakeLists.txt  README.md  package.xml
src/courseworks/realsense_gazebo_plugin/include/realsense_gazebo_plugin/: RealSensePlugin.hpp  gazebo_ros_realsense.hpp
src/courseworks/realsense_gazebo_plugin/launch/: depth_proc.launch  msg_proc.launch  realsense_multiple_urdf.launch  realsense_urdf.launch
src/courseworks/realsense_gazebo_plugin/src/: RealSensePlugin.cpp  gazebo_ros_realsense.cpp
src/courseworks/realsense_gazebo_plugin/urdf/: d435_simulation.xacro  multi_d435_simulation.xacro  realsense-D435.macro.xacro
src/courseworks/rpl_panda_with_rs/: CMakeLists.txt  package.xml
src/courseworks/rpl_panda_with_rs/config/: moveit_controllers.yaml  ros2_controllers.yaml  ros2_controllers_effort.yaml  ros2_controllers_hybrid.yaml
src/courseworks/rpl_panda_with_rs/launch/: camera_proc.launch.py  display.launch.py  display_real.launch.py
src/courseworks/rpl_panda_with_rs/rviz/: real_rviz.rviz  urdf.rviz
src/courseworks/rpl_panda_with_rs/scripts/: init_panda_pose.py
src/courseworks/rpl_panda_with_rs/urdf/: panda_with_rs.xacro
src/labs/pcl_demo/: CMakeLists.txt  package.xml
src/labs/pcl_demo/include/pcl_demo/: pcl_demo.hpp
src/labs/pcl_demo/src/: pcl_demo_node.cpp
src/labs/pcl_tutorial/: CMakeLists.txt  package.xml
src/labs/pcl_tutorial/config/: pcl_tutorial.yaml
src/labs/pcl_tutorial/launch/: pcl_tutorial.launch.py
src/labs/pcl_tutorial/src/: pcl_tutorial_node.cpp
src/labs/perception_pipeline_humble_demo/: CMakeLists.txt  README.rst  package.xml
src/labs/perception_pipeline_humble_demo/config/: sensors_3d.yaml
src/labs/perception_pipeline_humble_demo/launch/: depth_camera_environment.launch.py  perception_pipeline_demo.launch.py
src/labs/perception_pipeline_humble_demo/rviz2/: perception_pipeline.rviz
src/labs/perception_pipeline_humble_demo/scripts/: retime_pointclouds.py
src/labs/perception_pipeline_humble_demo/urdf/realsense_d435/: camera.urdf.xacro
