<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panda_description</name>
  <version>0.7.0</version>
  <description>Franka Emika Panda URDF, meshes, and xacro description (ROS2)</description>
  <maintainer email="support@franka.de">Franka Emika GmbH</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/franka_description</url>
  <url type="repository">https://github.com/frankaemika/franka_ros</url>
  <url type="bugtracker">https://github.com/frankaemika/franka_ros/issues</url>
  <author>Franka Emika GmbH</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
