<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>realsense_gazebo_plugin</name>
  <version>3.2.0</version>
  <description>Intel RealSense D435 Gazebo plugin package</description>
  <maintainer email="sergey.dorodnicov@intel.com">Sergey Dorodnicov</maintainer>
  <maintainer email="doron.hirshberg@intel.com">Doron Hirshberg</maintainer>
  <maintainer email="missrisalaheddine@gmail.com">Salah-Eddine Missri</maintainer>
  <maintainer email="adria.roig@pal-robotics.com">Adria Roig</maintainer>
  <maintainer email="sergio.moyano@pal-robotics.com">Sergio Moyano</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>rclcpp</depend>
  <depend>image_transport</depend>
  <depend>point_cloud_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>depth_image_proc</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros
      plugin_path="${prefix}/lib"
      gazebo_media_path="${prefix}"
      gazebo_model_path="${prefix}/models"
      />
  </export>
</package>
