<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rpl_panda_with_rs</name>
  <version>0.0.0</version>
  <description>The rpl_panda_with_rs package</description>
  <maintainer email="dennis@todo.todo">dennis</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>realsense_gazebo_plugin</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
